<resources>
    <string name="app_name">BSTU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="BSTU">БГТУ«Военмех» им. Д.Ф.Устинова</string>
    <string name="BSTU_2">Балтийский Государственный Технический Университет</string>
    <string name="Raspisanie">Расписание</string>
    <string name="Calendar">Календарь</string>
    <string name="DosiePrepodov">Досье преподавателей</string>
    <string name="historyBSTU">История ВУЗа</string>
    <string name="history_text">
        БГТУ «Военмех» им. Д. Ф. Устинова\n
        Государственное образовательное
        учреждение высшего профессионального образования федерального подчинения.
    </string>
    <string name="history_text_2">
        \n
        1872—1874 гг. на первой роте Измайловского полка было
        построено здание Ремесленного училища Цесаревича Николая, которое сейчас является
        главным зданием университета.\n
        1875 г. Училище было основано для подготовки мастеров-слесарей для промышленности.\n
        1917 г. Временным правительством было принято Постановление о преобразовании
        училища «Правительственное Петроградское техническое училище».\n
        А 23 июля 1921 оно переименовано в «Первый Петроградский механический техникум»\n
        1930 г. Университет организован как высшее учебное заведение «Механический институт»\n
        1932 г. Университет был преобразован в Военно-механический институт Народного
        Комиссариата тяжёлой промышленности. Факультеты: артиллерийский и боеприпасов.
        С 1934 года открыт факультет морского оружия.\n
        \n
        Указом Президиума Верховного Совета СССР от 18 ноября 1944 года институт награждён
        орденом Красного Знамени. В указе говорилось: «За особые заслуги в области подготовки
        специалистов для военной промышленности наградить Ленинградский военно-механический
        институт…» – это первое официальное упоминание института под названием ЛВМИ.\n
        \n
        1945 г. институт возобновляет свою деятельность в Ленинграде.\n
        1946 г. институт был передан из Министерства вооружения СССР в ведение Министерства образования СССР.\n
        1957 г. институт отмечает своё 25-летие.\n
        1960 г. переименование ЛВМИ в Ленинградский механический институт.\n
        1961 г. награждение ЛМИ Медалью АН СССР в честь запуска первого искусственного спутника Земли.
        Так был отмечен вклад института в развитие ракетно-космической техники,
        освоение космоса и подготовку кадров для соответствующих отраслей промышленности.\n
        1980 г. институт награждён орденом Ленина.\n
        \n
        1985 г. присвоение институту имени Дмитрия Федоровича Устинова,
        министра обороны СССР, Маршала Советского Союза, Героя Советского Союза,дважды Героя Социалистического Труда.
        \n
        7 декабря 1992 года – институт переименован в Балтийский государственный технический университет имени Д.Ф. Устинова
    </string>
    <string name="support_text">
        Здесь Вы можете сообщить нам об ошибках в работе приложения.\n
        Ошибках или изменениях в  расписании\n
        Так же Вы можете рассказать , чего вам не хватает в этом приложении, а мы постараемся это осуществить.\n
        С уважением, администрация.
    </string>
    <string name="support">Тех.Поддержка</string>
    <string name="menu_right"> У нас в планах добавить:\n
    1)Календарь, в котором можно отмечать события в ВУЗе,праздники.\n
    2)Возможность вам самим корректировать свое расписание( без помощи администрации ).\n
    3)Добавить уведомления о ближайших запланированных событиях и расписание на след день.\n
    4)Раздел аналогичный StudHelpers (Помощь по учебе между студентами)\n
        \n
        \n
    Так же присылайте нам свои идеи в разделе Тех.Поддержка.
    </string>
    <string name="exit">Выход</string>
    <string name="a_351">A351</string>
    <string name="a_361">A361</string>
    <string name="a_371">A371</string>
    <string name="facultets">Факультеты и кафедры</string>
    <string name="facultet_A">Ракетно-космичeской техники</string>
    <string name="facultet_I">Информационные и управляющие системы</string>
    <string name="facultet_E">Оружие и системы вооружения</string>
    <string name="facultet_O">Естественнонаучный</string>
    <string name="facultet_P">Международного промышленного менеджмента и коммуникации</string>

</resources>
