<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_raspisanie"
            android:title="@string/Raspisanie"
            android:icon="@drawable/ic_raspisanie"
            />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/Calendar"
            android:icon="@drawable/ic_calendar"
            android:onClick="calendarClick"
            />
        <item
            android:id="@+id/nav_history"
            android:title="@string/historyBSTU"
            android:icon="@drawable/ic_history"
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:title="@string/support"
                android:icon="@drawable/ic_setting"
                android:onClick="supportClick"
                />
            <item
                android:id="@+id/nav_exit"
                android:title="@string/exit"
                android:icon="@drawable/ic_exet"/>
        </menu>
    </item>

</menu>
