<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView

        android:paddingTop="30dp"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facultets"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Нажмите на факультет и удерживайте пару секунд"
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:textColor="@color/colorPrimary"
        />

    <TableLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:id="@+id/table_1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/facultet_A"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"
            android:id="@+id/facultet_A"
            android:background="@drawable/button_rounded"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facultet_I"/>

        <Button
            android:background="@drawable/button_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="И"
            android:id="@+id/facultet_I"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facultet_E"
            android:layout_marginLeft="40dp"/>
        <Button
            android:background="@drawable/button_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E"
            android:id="@+id/facultet_E"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facultet_O"
            android:layout_marginLeft="75dp"/>

        <Button
            android:background="@drawable/button_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O"
            android:id="@+id/facultet_O"/>
        <TextView
            android:layout_marginLeft="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facultet_P"/>
        <Button
            android:background="@drawable/button_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="P"
            android:id="@+id/facultet_P"/>
    </TableLayout>

</android.support.constraint.ConstraintLayout>